fixed bug on mobile site

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  padding: 0px;
+  margin: 0px;
 }
 
 body {
@@ -274,14 +274,38 @@ img {
 /* Mobile */
 
 @media(max-width: 768px) {
+
   .navbar {
     flex-direction: column;
     height: 120px;
-    padding: 20px;
+    padding: 0px 0px;
+    max-width: 100vw;
+    justify-content: center;
   }
+
+  .navbar ul {
+    flex-direction: row;
+    justify-content: center;
+    margin-right: 15px;
+  }
+
+  .navbar .logo {
+    font-size: 30px;
+    padding-bottom: 10px;
+  }
+
+  .navbar ul li a {
+    font-size: 15px;
+  }
+  
   .hero .content h1 {
-    font-size: 60px;
+    font-size: 35px;
   }
+
+  .hero .content p {
+    font-size: 20px;
+  }
+
   .middle {
     border-top: #333 1px solid;
     border-bottom: #333 1px solid;
@@ -293,7 +317,6 @@ img {
     margin: 0 3px;
     font-size: small;
   }
-
   .image-grid {
     flex-direction: column;
   }
